--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           method: "POST",
           headers: {
             "Content-Type": "application/json",
-            "Authorization": "Bearer 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"
+            "Authorization": "Bearer "
           },
           body: JSON.stringify({
             model: "gpt-3.5-turbo",
